--- a/templates/business/redeem.twig
+++ b/templates/business/redeem.twig
@@ -205,9 +205,9 @@
     {% endif %}
 </div>
 
-{% if error is defined or not redeemToken %}
+{% elseif error is defined or not redeemToken %}
     <!-- Error State -->
-    <div class="max-w-2xl mx-auto mt-8">
+    <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
         <div class="bg-red-50 border border-red-200 rounded-lg p-6 text-center">
             <svg class="mx-auto w-12 h-12 text-red-600 mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
