--- a/templates/index.twig
+++ b/templates/index.twig
@@ -184,4 +184,12 @@
         </div>
     </div>
 </div>
+<div class="bg-gray-900 py-16" id="membership">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="text-center">
+            <h2 class="text-3xl font-bold text-green-400 mb-4">Something, Something</h2>
+            <p class="text-lg text-gray-400 mb-8">Hey, we told you it was gonna be rough for a bit. Check back soon.</p>
+        </div>
+    </div
+</div>
 {% endblock %}
