--- a/templates/_layouts/base.twig
+++ b/templates/_layouts/base.twig
@@ -92,7 +92,7 @@
                              x-transition:leave="transition ease-in duration-150"
                              x-transition:leave-start="opacity-100 scale-100"
                              x-transition:leave-end="opacity-0 scale-95"
-                             class="absolute left-0 mt-2 w-80 rounded-lg shadow-xl bg-gray-800 ring-1 ring-black ring-opacity-5 border border-gray-700 z-50"
+                             class="absolute right-0 mt-2 w-64 rounded-lg shadow-xl bg-gray-800 ring-1 ring-black ring-opacity-5 border border-gray-700 z-50"
                              @click.away="open = false">
                             <form action="/search" method="get" class="p-4">
                                 <input type="text" name="q" placeholder="Search..." class="w-full px-4 py-2 bg-gray-900 text-gray-100 border border-gray-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" autofocus>
