--- a/templates/users/register.twig
+++ b/templates/users/register.twig
@@ -8,6 +8,7 @@
 		<div class="text-center mb-8">
 			<h1 class="text-3xl font-bold text-green-400">Create Account</h1>
 			<p class="text-gray-400 mt-2">Do not do this. We're testing, nothing works.</p>
+			<p class="text-gray-400 mt-2">We can't take your money even if we wanted to. Hence the <strong>DEV</strong> part.</p>
 		</div>
 
 		{# Freeform form with custom dark theme styling #}
